# ParticleCoverHLS

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  README.org  hls.app  insight.py  note.md  note.org  wedgeData_v3_128.txt
.apc/: autopilot.apfmapping
include/: config.h  constants.h  cover.h  dataset.h  debug.h  environment.h  event.h  file_reader.h  makepatch_hls.h  parallelogram.h  patch.h  patch_buffer.h  point.h  sim_utils.h  superpoint.h  system.h  types.h  utils.h
reference/: makePatch_alignedtoLine  makePatch_alignedtoLine.cpp  reference  reference-makePatch_alignedtoLine.gcda  reference.h
reference/old_ref/: makePatch_alignedtoLine  makePatch_alignedtoLine.cpp  makefile  reference-makePatch_alignedtoLine.gcda  reference-makePatch_alignedtoLine.gcno  wedgeData_v3_128.txt
reference/tanish_ver/: cppOutput.txt  makefile  patchmaker  patchmaker.cpp  wedgeData_v3_128.txt
reference/zakk_ver/: .gitignore  makefile
solution1/: directives.tcl  script.tcl  solution1.aps  solution1.directive  solution1_data.json
solution1/.autopilot/: .automg_exit  .autopilot_exit
solution1/.autopilot/db/: .message_syn.xml  __ctype_info__.xml  a.g.1.bc  a.g.2.bc  a.g.2.prechk.bc  a.g.bc  a.g.ld.0.bc  a.g.ld.1.lower.bc  a.g.ld.3.fpc.bc  a.g.ld.4.m2.bc  a.g.ld.5.gdce.bc  a.o.1.tmp.bc  a.o.2.bc  a.o.3.bc  all.directive.json  apatb_dummy_top_level_function.cpp  apatb_dummy_top_level_function_ir.ll  autopilot.rtl.models.txt  bugpoint.sh  burst.xml  cover.bc  cover.g.bc  cover.pp.0.cxx  dataset.bc  dataset.g.bc  dataset.pp.0.cxx  debug.bc  debug.pp.0.cxx  dummy_top_level_function.adb  dummy_top_level_function.adb.xml  dummy_top_level_function.aemf  dummy_top_level_function.bind.adb  dummy_top_level_function.compgen.tcl  dummy_top_level_function.constraint.tcl  dummy_top_level_function.design.xml  dummy_top_level_function.rtl_wrap.cfg.tcl  dummy_top_level_function.sched.adb  dummy_top_level_function.sched.adb.xml  dummy_top_level_function.tbgen.tcl  dummy_top_level_function.verbose.bind.rpt  (+30 more)
solution1/.debug/: dummy_top_level_function.protoinst
solution1/impl/verilog/: dummy_top_level_function.v  dummy_top_level_function_mul_64ns_66ns_129_1_1.v
solution1/impl/vhdl/: dummy_top_level_function.vhd  dummy_top_level_function_mul_64ns_66ns_129_1_1.vhd
solution1/syn/report/: csynth.rpt  csynth.xml  dummy_top_level_function_csynth.rpt  dummy_top_level_function_csynth.xml
solution1/syn/verilog/: dummy_top_level_function.v  dummy_top_level_function_mul_64ns_66ns_129_1_1.v
solution2/: directives.tcl  script.tcl  solution2.aps  solution2.directive  solution2_data.json
solution2/.autopilot/: .automg_exit  .autopilot_exit
solution2/.autopilot/db/: .message_syn.xml  __ctype_info__.xml  a.g.1.bc  a.g.2.bc  a.g.2.prechk.bc  a.g.ld.0.bc  a.g.ld.1.lower.bc  a.g.ld.3.fpc.bc  a.g.ld.4.m2.bc  a.g.ld.5.gdce.bc  a.o.1.bc  a.o.1.tmp.bc  a.o.2.bc  a.o.3.bc  all.directive.json  apatb_system_top.cpp  apatb_system_top_ir.ll  autopilot.rtl.models.txt  bugpoint.sh  burst.xml  cover.bc  cover.g.bc  cover.pp.0.cxx  dataset.g.bc  dataset.pp.0.cxx  dataset_add_boundary_point.adb  dataset_add_boundary_point.aemf  dataset_add_boundary_point.bind.adb  dataset_add_boundary_point.bind.adb.xml  dataset_add_boundary_point.compgen.tcl  dataset_add_boundary_point.sched.adb  dataset_add_boundary_point.sched.adb.xml  dataset_add_boundary_point.tbgen.tcl  dataset_add_boundary_point.verbose.bind.rpt  dataset_add_boundary_point.verbose.bind.rpt.xml  dataset_add_boundary_point.verbose.rpt  dataset_add_boundary_point.verbose.rpt.xml  dataset_add_boundary_point.verbose.sched.rpt  dataset_add_boundary_point.verbose.sched.rpt.xml  environment.bc  (+32 more)
solution2/.debug/: system_top.protoinst
solution2/impl/verilog/: system_top.v  system_top_ap_uitodp_0_no_dsp_64_ip.tcl  system_top_dadd_64ns_64ns_64_4_full_dsp_1.v  system_top_dcmp_64ns_64ns_1_2_no_dsp_1.v  system_top_ds_array_layer_num.v  (+3 more)
solution3/.autopilot/: .autopilot_exit
solutionOpt01/: script.tcl  solutionOpt01.aps  solutionOpt01.directive  solutionOpt01_data.json
solutionOpt01/.autopilot/: .automg_exit  .autopilot_exit
solutionOpt01/.debug/: system_top.protoinst
solutionOpt1_5/: script.tcl  solutionOpt1_5.aps  solutionOpt1_5.directive  solutionOpt1_5_data.json
solutionOpt1_5/.autopilot/: .automg_exit  .autopilot_exit
solution_opt1/: script.tcl  solution_opt1.aps  solution_opt1_data.json
solution_opt1/.autopilot/: .automg_exit  .autopilot_exit
solution_opt1/.debug/: system_top.protoinst
src/: constants.cxx  cover.cxx  dataset.cxx  environment.cxx  event.cxx  file_reader.cpp  file_reader.cxx  main.cxx  makepatch_hls.cxx  parallelogram.cxx  parser.cxx  patch.cxx  patch_buffer.cpp  patch_buffer.cxx  point.cxx  sim_utils.cxx  superpoint.cxx  system.cpp  system.cxx  types.cpp
stats/: num_points_per_event.csv  num_points_per_layer.csv
test/: test_cover.cxx  test_dataset.cxx  test_environment.cxx  test_file_reader.cxx  test_file_reader_comp.cxx  test_hls_features.cxx  test_patch.cxx  test_patch_buffer.cxx  test_superpoint.cxx  test_system.cpp  test_system.cxx  test_system_hls.cxx
(+547 files in other folders)
